fix(header): fix z-index

--- a/src/components/OOHeader/OOHeader.scss
+++ b/src/components/OOHeader/OOHeader.scss
@@ -24,7 +24,7 @@
   border-bottom: 1px solid transparent;
   width: 100%;
   height: 72px;
-  z-index: 1000;
+  z-index: 999999;
 
   &.ar {
     direction: rtl;
